crates/clove-tui/src/snapshots/clove_tui__snapshot__search_active_square.snap
---
source: crates/clove-tui/src/snapshot.rs
expression: rendered
---
┌ clove ───────────────────────────────────────────────────┐
│  All 7  │  Ready 4  │  Blocked 1                         │
└──────────────────────────────────────────────────────────┘
┌ Items (1/7) ─────────────────────────────────────────────┐
│▌◐ proj-00000002 p0 feature Build REST API ●              │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
┌ Overview · Dep tree · Comments ──────────────────────────┐
│ Build REST API                                           │
│ proj-00000002                                            │
│                                                          │
│ status     in_progress   ready                           │
│ priority   p0                                            │
│ assignee   grace                                         │
│                                                          │
│ type       feature                                       │
│ labels     area:api, backend                             │
│ created    2026-01-01 09:00 UTC  (6w ago)                │
│ updated    2026-01-20 11:30 UTC  (3w ago)                │
│                                                          │
│ deps       proj-00000001                                 │
│                                                          │
│ ── body ──────────────────────────────────────────────── │
│ Goals                                                    │
│                                                          │
│ Build a REST API with axum; see docs/api.md.             │
│                                                          │
│ • CRUD endpoints                                         │
│ • Auth middleware                                        │
│                                                          │
│ Steps                                                    │
│                                                          │
│ 1. Define routes                                         │
│ 2. Wire handlers                                         │
│                                                          │
│ │ Blocked on the schema work until it lands.             │
│                                                          │
└──────────────────────────────────────────────────────────┘
/api▏   (Enter: keep · Esc: clear)
