crates/clove-tui/src/snapshots/clove_tui__snapshot__sorted_by_updated_landscape.snap
---
source: crates/clove-tui/src/snapshot.rs
expression: rendered
---
  All 7  │  Ready 4  │  Blocked 1
┌ Items (7) ───────────────────────────────────┐┌ Overview · Dep tree · Comments ──────────────────────────────────────┐
│ ○ B #0HZ6C3PW ↑ Investigate flaky CI ●       ││ #9QX4D1B7  ! FEATURE                           ◐ in_progress · ready │
│▌◐ F #9QX4D1B7 ! Build REST API ●             ││ Build REST API                                       @grace · deps 1 │
│ ○ F #5RB9NC2V • Frontend dashboard ●         ││──────────────────────────────────────────────────────────────────────│
│ ○ F #K2M8ZP5R • Write integration tests ✗    ││ Goals                                                                │
│ ● C #7AF3K2MN ↑ Set up database schema       ││                                                                      │
│ ● D #8XQ4F7DM ↓ Docs site                    ││ Build a REST API with axum; see docs/api.md.                         │
│ ○ E #3HT6WYG5 • Ship v1 release ●            ││                                                                      │
│                                              ││ • CRUD endpoints                                                     │
│                                              ││ • Auth middleware                                                    │
│                                              ││                                                                      │
│                                              ││ Steps                                                                │
│                                              ││                                                                      │
│                                              ││──────────────────────────────────────────────────────────────────────│
│                                              ││ labels area:api, backend              created Jan 1 · updated Jan 20 │
└──────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────┘
sort:updated↓  7 item(s) loaded   ?: help · q: quit
