crates/clove-tui/src/snapshots/clove_tui__snapshot__sorted_by_updated_portrait.snap
---
source: crates/clove-tui/src/snapshot.rs
expression: rendered
---
┌ clove ───────────────────────────────┐
│  All 7  │  Rdy 4  │  Blk 1           │
└──────────────────────────────────────┘
┌ Items (7) ───────────────────────────┐
│ ○ B #0HZ6C3PW ↑ Investigate flaky… ● │
│▌◐ F #9QX4D1B7 ! Build REST API ●     │
│ ○ F #5RB9NC2V • Frontend dashboard ● │
│ ○ F #K2M8ZP5R • Write integration… ✗ │
│ ● C #7AF3K2MN ↑ Set up database s…   │
│ ● D #8XQ4F7DM ↓ Docs site            │
│ ○ E #3HT6WYG5 • Ship v1 release ●    │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
sort:updated↓  7 item(s) loaded  ?·q
