crates/clove-tui/src/snapshots/clove_tui__snapshot__sorted_by_updated_square.snap
---
source: crates/clove-tui/src/snapshot.rs
expression: rendered
---
┌ clove ───────────────────────────────────────────────────┐
│  All 7  │  Ready 4  │  Blocked 1                         │
└──────────────────────────────────────────────────────────┘
┌ Items (7) ───────────────────────────────────────────────┐
│ ○ B #0HZ6C3PW ↑ Investigate flaky CI ●                   │
│▌◐ F #9QX4D1B7 ! Build REST API ●                         │
│ ○ F #5RB9NC2V • Frontend dashboard ●                     │
│ ○ F #K2M8ZP5R • Write integration tests ✗                │
│ ● C #7AF3K2MN ↑ Set up database schema                   │
│ ● D #8XQ4F7DM ↓ Docs site                                │
│ ○ E #3HT6WYG5 • Ship v1 release ●                        │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
┌ Overview · Dep tree · Comments ──────────────────────────┐
│ #9QX4D1B7  ! FEATURE               ◐ in_progress · ready │
│ Build REST API                           @grace · deps 1 │
│──────────────────────────────────────────────────────────│
│ Goals                                                    │
│                                                          │
│ Build a REST API with axum; see docs/api.md.             │
│                                                          │
│ • CRUD endpoints                                         │
│ • Auth middleware                                        │
│                                                          │
│ Steps                                                    │
│                                                          │
│ 1. Define routes                                         │
│ 2. Wire handlers                                         │
│                                                          │
│ │ Blocked on the schema work until it lands.             │
│                                                          │
│ ──────────────────────────────────────────────────────── │
│                                                          │
│ Done when the integration tests pass.                    │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│──────────────────────────────────────────────────────────│
│ labels area:api, backend  created Jan 1 · updated Jan 20 │
└──────────────────────────────────────────────────────────┘
sort:updated↓  7 item(s) loaded   ?: help · q: quit
